# mtl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  release_package.yml  rust.yml
assets/: demo.tape
benches/: benchmark.rs  md5.rs  read.rs  xxhash.rs
src/: builder.rs  cache.rs  commands.rs  data.rs  error.rs  filesystem.rs  filter.rs  hash.rs  lib.rs  main.rs  path.rs  progress.rs
src/builder/: parallel.rs
src/commands/: local.rs  ref.rs  tool.rs
src/filter/: ignore.rs  match_all.rs  path.rs
tests/: cat-object.sh  common.inc  diff.sh  gc.sh  local_build.sh  local_list.sh  local_update.sh  pack.sh  print-tree.sh  ref.sh  referenced-not-gc.sh  special-reference.sh
tests/boilerplate/case1/: .gitignore
tests/boilerplate/case1/dir1/: file1
tests/boilerplate/case1/dir2/: file1
tests/boilerplate/case1/z1/: file
tests/boilerplate/case2/: .ignore
tests/boilerplate/case2/a1/: 3ba7983e72764940
tests/boilerplate/case2/a1/b1/: 8aabbcae79d31d97
tests/boilerplate/case2/a1/b1/c1/: b2c733cd0e4c4dda
tests/boilerplate/case2/a1/b1/c2/: ba3748c7103cb628
tests/boilerplate/case2/a1/b2/: f928203c32b88a4d
tests/boilerplate/case2/a1/b2/c1/: df427c62f16003ab
tests/boilerplate/case2/a2/: 3c598b3080464002
tests/boilerplate/case2/a2/b1/: 62c8aa6408e56331
tests/boilerplate/case2/a2/b2/: 0b8cafeedda3d3ad
tests/boilerplate/case2/a2/b2/c1/: d9bbf843cec34ef0
tests/boilerplate/case2/a2/b2/c2/: 1b12faa2eee73da1
tools/: build-by-revision.sh  compare-hash.sh  compare-performance.sh
