[package]
name = "mtl"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
byteorder = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.5.1"
console = "0.15.7"
crossbeam-channel = "0.5.10"
env_logger = "0.10.1"
ignore = "0.4.21"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
libc = "0.2.151"
log = "0.4.20"
memmap = "0.7.0"
num_cpus = "1.16.0"
page_size = "0.6.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
redb = "1.4.0"
scopeguard = "1.2.0"
similar = "2.3.0"
thiserror = "1.0.52"
tikv-jemallocator = { version = "0.5.4", optional = true }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "fs", "macros"] }
xxhash-rust = { version = "0.8.8", features = ["xxh64", "xxh3"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
jemalloc = ["tikv-jemallocator"]

[lib]
name = "mtl"
path = "src/lib.rs"

[[bench]]
name = "xxhash"
harness = false

[[bench]]
name = "read"
harness = false
